# backend/gen/openapi/agent-platform.swagger.json
@@ -679,6 +679,58 @@
         ]
       }
     },
+    "/api/v1/admin/platform-execution-default": {
+      "get": {
+        "operationId": "AgentWorkspaceService_GetPlatformExecutionDefault",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1PlatformExecutionDefault"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "AgentWorkspaceService"
+        ]
+      },
+      "put": {
+        "operationId": "AgentWorkspaceService_SetPlatformExecutionDefault",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1PlatformExecutionDefault"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1SetPlatformExecutionDefaultRequest"
+            }
+          }
+        ],
+        "tags": [
+          "AgentWorkspaceService"
+        ]
+      }
+    },
     "/api/v1/admin/redemption-code-batches": {
       "post": {
         "operationId": "AgentWorkspaceService_CreateRedemptionCodeBatch",
@@ -8876,6 +8928,37 @@
         "version": {
           "type": "string",
           "format": "int64"
+        },
+        "execution_inherited": {
+          "type": "boolean"
+        },
+        "platform_execution_available": {
+          "type": "boolean"
+        }
+      }
+    },
+    "v1PlatformExecutionDefault": {
+      "type": "object",
+      "properties": {
+        "runtime_engine": {
+          "type": "string"
+        },
+        "provider_model_id": {
+          "type": "string"
+        },
+        "validation_run_id": {
+          "type": "string"
+        },
+        "updated_by_user_id": {
+          "type": "string"
+        },
+        "version": {
+          "type": "string",
+          "format": "int64"
+        },
+        "updated_at": {
+          "type": "string",
+          "format": "date-time"
         }
       }
     },
@@ -9671,6 +9754,24 @@
         }
       }
     },
+    "v1SetPlatformExecutionDefaultRequest": {
+      "type": "object",
+      "properties": {
+        "runtime_engine": {
+          "type": "string"
+        },
+        "provider_model_id": {
+          "type": "string"
+        },
+        "validation_run_id": {
+          "type": "string"
+        },
+        "expected_version": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
     "v1Skill": {
       "type": "object",
       "properties": {
@@ -9825,6 +9926,9 @@
         "expected_version": {
           "type": "string",
           "format": "int64"
+        },
+        "inherit_platform_execution": {
+          "type": "boolean"
         }
       }
     },
